--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>News Page</title>
+    <title>Contact Page</title>
 </head>
 
 <body>
 
-    <p>This is News page.</p>
-    <h1>New Update</h1>
+    <p>Contact Details</p>
+
 
 </body>
 
