Added Beta Features

--- a/comment.html
+++ b/comment.html
@@ -4,12 +4,13 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Contact Page</title>
+    <title>Comment Page</title>
 </head>
 
 <body>
 
-    <p>Contact Details</p>
+    <p>This is Comment page.</p>
+    <h1>New Update</h1>
     <h1>New Update</h1>
     <h2>This is Branch Update Code.</h2>
 </body>
