--- a/news.html
+++ b/news.html
@@ -12,6 +12,7 @@
     <p>This is News page.</p>
     <h1>New Update</h1>
     <h1>New Update</h1>
+    <h2>This is Branch Update Code.</h2>
 </body>
 
 
